--- a/auth/package.json
+++ b/auth/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@types/express": "^4.17.15",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "express-validator": "^6.14.3",
+    "mongoose": "^7.0.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
   }
