--- a/auth/package.json
+++ b/auth/package.json
@@ -10,10 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cookie-session": "^2.0.44",
     "@types/express": "^4.17.15",
+    "@types/jsonwebtoken": "^9.0.2",
+    "cookie-session": "^2.0.0",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-validator": "^6.14.3",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
