--- a/tickets/package.json
+++ b/tickets/package.json
@@ -28,6 +28,7 @@
     "express-validator": "^6.14.3",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
+    "node-nats-streaming": "^0.3.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
   },
