--- a/orders/package.json
+++ b/orders/package.json
@@ -30,7 +30,8 @@
     "mongoose": "^7.0.3",
     "node-nats-streaming": "^0.3.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "mongoose-update-if-current": "^1.4.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.1",
