--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -39,3 +39,11 @@ build:
         manual:
           - src: "src/**/*.ts"
             dest: .
+    - image: harishkrishnan1993/expiration
+      context: expiration
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: "src/**/*.ts"
+            dest: .
