--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -47,3 +47,11 @@ build:
         manual:
           - src: "src/**/*.ts"
             dest: .
+    - image: harishkrishnan1993/payments
+      context: payments
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: "src/**/*.ts"
+            dest: .
